--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body {
+  padding: 10px;
+}
+
 @-webkit-keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
@@ -35,8 +39,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media only screen and (min-width: 0px) {
-  .App .container, .display .container, .How2Play .container {
+.App .container, .display .container {
+  display: flex;
+  display: -moz-flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  -webkit-align-items: center;
+}
+
+@media only screen and (min-width: 400px) {
+  .How2Play .container {
     display: flex;
     display: -moz-flex;
     display: -webkit-flex;
@@ -46,7 +62,7 @@ body {
     align-content: center;
     align-items: center;
     -webkit-align-items: center;
-  } 
+  }
 }
 
 button {
